# agnostic-orderbook

./: .gitignore  Cargo.toml  README.md
js/: README.md  jest.config.js  package.json  tsconfig.json
js/src/: bindings.ts  event_queue.ts  index.ts  instructions.ts  market_state.ts  raw_instructions.ts  slab.ts  test.ts  types.ts  utils.ts
js/src/tests/: end_to_end.test.ts  test_utils.ts
js/wasm/: Cargo.toml
js/wasm/src/: critbit.rs  lib.rs
program/: .gitignore  Cargo.toml  instruction.rs  state.rs
program/benches/: deep_ob.rs
program/src/: critbit.rs  critbit_old.rs  entrypoint.rs  error.rs  instruction.rs  lib.rs  orderbook.rs  original_critbit.rs  processor.rs  state.rs  utils.rs
program/src/processor/: cancel_order.rs  close_market.rs  consume_event.rs  consume_events.rs  create_market.rs  mass_cancel_orders.rs  mass_cancel_quotes.rs  new_order.rs  pause_matching.rs  prune_orders.rs  resume_matching.rs
program/src/state/: critbit.rs  event_queue.rs  market_state.rs  orderbook.rs
program/tests/: deep_ob.rs  functional.rs
program/tests/common/: utils.rs
