[package]
name = "agnostic-orderbook"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-bpf = []
wasm = []
debug-asserts = []
lib = []

[dependencies]
solana-program = "1.8.0"
bytemuck = {version = "1.7.2", features= ["derive"]}
num_enum = "0.5.4"
borsh = "0.9.1"
thiserror = "1.0.24"
num-traits = "0.2"
num-derive = "0.3"
enumflags2 = "0.7.1"
spl-token = {version="3.2.0", features= ["no-entrypoint"]}

[dev-dependencies]
hexdump = "0.1.0"
solana-sdk = "1.8.0"
rand = "0.8.4"
arrayref = "0.3.6"
solana-program-test = "1.8.0"
tokio = {version="1.6", features = ["macros"]}



[lib]
crate-type = ["cdylib", "lib"]
