[package]
name = "dex-wasm"
version = "0.1.0"
authors = ["ellttBen <elliott@bonfida.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["console_error_panic_hook"]


[dependencies]
wasm-bindgen = "0.2.78"
console_error_panic_hook = { version = "0.1.6", optional = true }
borsh = "0.9.1"
num-derive = "0.3.3"
num-traits = "0.2.14"


[dev-dependencies]
wasm-bindgen-test = "0.3.13"


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[lib]
crate-type = ["cdylib", "rlib"]
